[gd_scene load_steps=5 format=3 uid="uid://bds0ldhpvbn4p"]

[ext_resource type="Theme" uid="uid://bbhj0pqw68l31" path="res://main_theme.tres" id="1_biiro"]
[ext_resource type="Script" path="res://scenes/ui/tooltip.gd" id="2_8prc7"]
[ext_resource type="Texture2D" uid="uid://ck1t4hdip6xrl" path="res://art/tile_0119.png" id="2_gyxh1"]
[ext_resource type="StyleBox" uid="uid://db4xge0pq3axf" path="res://scenes/card_ui/card_base_stylebox.tres" id="2_hguvg"]

[node name="Tooltip" type="PanelContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_right = 55.0
offset_bottom = 36.0
grow_horizontal = 2
theme = ExtResource("1_biiro")
theme_override_styles/panel = ExtResource("2_hguvg")
script = ExtResource("2_8prc7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TooltipIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 10)
layout_mode = 2
texture = ExtResource("2_gyxh1")
expand_mode = 2
stretch_mode = 5

[node name="CardName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Nake"

[node name="TooltipText" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/line_separation = 2
bbcode_enabled = true
text = "tooltip
description"
